- create class AppConfig to implement ModelMapper to app - some changes in whole code (implement ModelMapper method)